# digiseller-to-google-sheets

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  sample.env  settings.py
api/: digiseller_api.py  google_sheets_api.py
api/tests/: test_digiseller_api_py.py  test_google_api.py
data_sync/: data_sync.py
products/: products.py
sync/: data_updaters.py
utils/: decorators.py
