[tool.poetry]
name = "digiseller-google-sync"
version = "0.1.0"
description = ""
authors = ["ivan <shanin-i2011@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
requests = "~2.31.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
