[tool.poetry]
name = "digiseller-google-sync"
version = "0.1.0"
description = ""
authors = ["ivan <shanin-i2011@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
requests = "~2.31.0"
gspread = "~5.11.3"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
flake8-pyproject = "^1.2.3"

[tool.flake8]
exclude = ["__pycache__", "venv", "settings.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
